# szurubooru-toolkit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  auto_tagger.py  config  config.json  config.toml  config_sample.json  config_sample.toml  config_sample_gallery-dl.json  create_tags.py  crontab  crontab_sample  docker-compose.yml  entrypoint.sh  gallery-dl-extract-archives-with-upscale.py  gallery-dl-upscale.py  pyproject.toml  recursive_upload.sh  requirements.txt  run-webserver.py  setup.cfg  upload_images.py
.claude/skills/run-szurubooru-toolkit/: SKILL.md  driver.py
.github/workflows/: deploy-to-docker-hub.yml  deploy-to-pypi.yml
chrome_extension/: README.md  background.js  manifest.json  popup.html  popup.js  styles.css
classes/: api.py  deepbooru.py  iqdb.py  post.py  saucenao.py  user_input.py
classes/boorus/: danbooru.py  gelbooru.py  konachan.py  pixiv.py  sankaku.py  yandere.py
classes/scraper/: __init__.py  saucenao.py  scrape_danbooru.py  scrape_gelbooru.py  scrape_pixiv.py  scrape_sankaku.py
firefox_addon/: README.md  background.js  build.sh  manifest.json  popup.html  popup.js  styles.css
misc/: helpers.py
scripts/: auto-tagger.py  auto_tagger.py  create_tags.py  upload_images.py
src/scripts/: auto_tagger.py  upload_media.py
src/szuru_toolkit/: __init__.py  config.py  danbooru.py  deepbooru.py  gelbooru.py  sankaku.py  saucenao.py  szurubooru.py  utils.py
src/szuru_toolkit/scripts/: auto_tagger.py  create_tags.py  upload_media.py
src/szurubooru_toolkit/: __init__.py  boorus.py  config.py  danbooru.py  deepbooru.py  gelbooru.py  pixiv.py  relations.py  sankaku.py  saucenao.py  szurubooru.py  twitter.py  utils.py  wdtagger.py
src/szurubooru_toolkit/scripts/: __init__.py  auto_tagger.py  create_relations.py  create_tags.py  delete_posts.py  find_duplicates.py  fix_relations.py  import_from.py  import_from_booru.py  import_from_twitter.py  import_from_url.py  preview_tags.py  reset_posts.py  szuru_toolkit.py  tag_posts.py  update_db_timestamps.py  upload_media.py  webserver.py
tests/: test_boorus.py  test_concurrency.py  test_config.py  test_create_tags.py  test_danbooru.py  test_deepbooru.py  test_find_duplicates.py  test_gallery_dl.py  test_import_from_url.py  test_relations.py  test_saucenao.py  test_search_boorus.py  test_szurubooru_client.py  test_upload_media.py  test_utils.py  test_wdtagger.py
upload_images/: cleanup_uploads.sh  config  upload_images.py
