[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
skip-string-normalization = true
preview = true

[tool.isort]
line_length = 120
lines_after_imports = 2
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["szurubooru_toolkit"]
known_local_folder = ["src/szurubooru_toolkit"]
multi_line_output = 3
force_single_line = true

[tool.poetry]
name = "szurubooru-toolkit"
version = "1.0.3"
description = "Python package and script collection to manage szurubooru."
authors = ["reluce <reluce@fkosquad.moe>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/reluce/szurubooru-toolkit"
documentation = "https://github.com/reluce/szurubooru-toolkit"
keywords = ["szurubooru", "szuru", "booru", "saucenao", "deepbooru"]

[tool.poetry.scripts]
szuru-toolkit = 'szurubooru_toolkit.scripts.szuru_toolkit:cli'

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Pillow = "^9.5.0"
Pybooru="^4.2.2"
pysaucenao="^1.6.1"
requests="^2.25.1"
tqdm="^4.65.0"
tensorflow="^2.12.0"
keras="^2.12.0"
numpy="^1.23.5"
pyszuru="^0.3.1"
loguru = "^0.7.0"
validators = "^0.20.0"
gallery-dl = "^1.26.5"
cunnypy = "^2.0.0"
tldextract = "^3.4.4"
flask = "^3.0.0"
pixivpy3 = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pre-commit = "^3.0.0"
