[tool.black]
line-length = 140
skip-string-normalization = true
preview = true

[tool.isort]
line_length = 120
lines_after_imports = 2
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["szurubooru_toolkit"]
known_local_folder = ["src/szurubooru_toolkit"]
multi_line_output = 3
force_single_line = true

[tool.uv]
package = true

[project]
authors = [
    {name = "reluce", email = "reluce@fkosquad.moe"},
]
license = "GPL-3.0-only"
requires-python = "<3.12,>=3.11"
dependencies = [
    "Pillow<10.0.0,>=9.5.0",
    "Pybooru<5.0.0,>=4.2.2",
    "pysaucenao<2.0.0,>=1.6.1",
    "requests<3.0.0,>=2.25.1",
    "tqdm<5.0.0,>=4.65.0",
    "numpy<2.0.0,>=1.23.5",
    "pyszuru<1.0.0,>=0.3.1",
    "loguru<1.0.0,>=0.7.0",
    "validators>=0.20.0,<1.0.0",
    "gallery-dl<2.0.0,>=1.26.5",
    "cunnypy<3.0.0,>=2.0.0",
    "tldextract<4.0.0,>=3.4.4",
    "flask<4.0.0,>=3.0.0",
    "pixivpy3<4.0.0,>=3.7.4",
    "tensorflow~=2.15.0",
]
name = "szurubooru-toolkit"
version = "1.1.0"
description = "Python package and script collection to manage szurubooru."
readme = "README.md"
keywords = [
    "szurubooru",
    "szuru",
    "booru",
    "saucenao",
    "deepbooru",
]

[project.urls]
repository = "https://github.com/reluce/szurubooru-toolkit"
documentation = "https://github.com/reluce/szurubooru-toolkit"

[project.scripts]
szuru-toolkit = "szurubooru_toolkit.scripts.szuru_toolkit:cli"

[dependency-groups]
dev = [
    "black<24.0.0,>=23.0.0",
    "flake8<7.0.0,>=6.0.0",
    "isort<6.0.0,>=5.10.1",
    "pre-commit<4.0.0,>=3.0.0",
]
