[tool.black]
line-length = 140
skip-string-normalization = true
preview = true

[tool.isort]
line_length = 120
lines_after_imports = 2
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["szurubooru_toolkit"]
known_local_folder = ["src/szurubooru_toolkit"]
multi_line_output = 3
force_single_line = true

[tool.uv]
package = true

[project]
authors = [
    {name = "reluce", email = "reluce@fkosquad.moe"},
]
license = "GPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "Pillow<12.0.0,>=9.5.0",
    "httpx<1.0.0,>=0.24.0",
    "click<9.0.0,>=8.0.0",
    "tqdm<5.0.0,>=4.65.0",
    "loguru<1.0.0,>=0.7.0",
    "gallery-dl<2.0.0,>=1.26.5",
]
name = "szurubooru-toolkit"
version = "1.2.2"
description = "Python package and script collection to manage szurubooru."
readme = "README.md"
keywords = [
    "szurubooru",
    "szuru",
    "booru",
    "saucenao",
    "deepbooru",
]

[project.optional-dependencies]
deepbooru = [
    "onnxruntime<2.0.0,>=1.19.0",
    "numpy<3.0.0,>=1.23.5",
]
pixiv = [
    "pixivpy3<4.0.0,>=3.7.4",
]

[project.urls]
repository = "https://github.com/reluce/szurubooru-toolkit"
documentation = "https://github.com/reluce/szurubooru-toolkit"

[project.scripts]
szuru-toolkit = "szurubooru_toolkit.scripts.szuru_toolkit:cli"

[dependency-groups]
dev = [
    "black<24.0.0,>=23.0.0",
    "flake8<7.0.0,>=6.0.0",
    "isort<6.0.0,>=5.10.1",
    "pre-commit<4.0.0,>=3.0.0",
    "pytest<9.0.0,>=8.0.0",
    # For the deepbooru tests: run and build small ONNX models
    "onnxruntime<2.0.0,>=1.19.0",
    "onnx<2.0.0,>=1.16.0",
    "numpy<3.0.0,>=1.23.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
